module12/httpserver-gw.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
 name: httpserver-gw
 namespace: httpserver
spec:
 selector:
  istio: ingressgateway
 servers:
 - hosts:
    - httpsserver.cncamp.io
   port:
    number: 443
    name: https-default
    protocol: HTTPS
   tls:
    credentialName: cncamp-credential
    mode: SIMPLE
