module12/httpserver-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
 name: httpserver-vs
 namespace: httpserver
spec:
 hosts:
  - httpsserver.cncamp.io
 gateways:
  - httpserver-gw
 http:
  - match:
        - port: 443
    route:
      - destination:
         host: httpsvc.httpserver.svc.cluster.local
         port:
            number: 80
